# zinc

./: Cargo.toml
schnorr/: Cargo.toml
zinc-tester/: Cargo.toml
zinc-vm/: Cargo.toml
zinc-vm/src/: errors.rs  facade.rs  lib.rs
zinc-vm/src/cli/commands/: debug.rs  prove.rs  run.rs  setup.rs  verify.rs
zinc-vm/src/constraint_systems/: debug_cs.rs  duplicate_removing_cs.rs  logging_cs.rs  noop_cs.rs
zinc-vm/src/core/: internal.rs  mod.rs
zinc-vm/src/core/state/: cell.rs  data_stack.rs  evaluation_stack.rs  mod.rs
zinc-vm/src/facade/: mod.rs
zinc-vm/src/facade/proving_systems/: groth16.rs  mod.rs
zinc-vm/src/gadgets/: conditional_select.rs  expression.rs  misc.rs  mod.rs
zinc-vm/src/gadgets/arithmetic/: abs.rs  add.rs  div_rem.rs  field.rs  mod.rs  mul.rs  neg.rs  num.rs  sub.rs
zinc-vm/src/gadgets/arrays/: mod.rs
zinc-vm/src/gadgets/auto_const/: mod.rs
zinc-vm/src/gadgets/boolean/: and.rs  not.rs  or.rs
zinc-vm/src/gadgets/comparison/: mod.rs  multieq.rs
zinc-vm/src/gadgets/scalar/: mod.rs  scalar_type.rs
zinc-vm/src/gadgets/types/: mod.rs  uint32.rs
zinc-vm/src/gadgets/utils/: fr_bigint.rs
zinc-vm/src/instructions/: assert.rs  call_builtin.rs  cast.rs  dbg.rs  markers.rs  noop.rs  testing_utils.rs
zinc-vm/src/instructions/builtins/: add.rs  and.rs  div.rs  eq.rs  ge.rs  gt.rs  le.rs  lt.rs  mul.rs  ne.rs  neg.rs  not.rs  or.rs  rem.rs  sub.rs  xor.rs
zinc-vm/src/instructions/builtins/binary/: bit_and.rs  bit_not.rs  bit_or.rs  bit_shift_left.rs  bit_shift_right.rs  bit_xor.rs
zinc-vm/src/instructions/flow/: branching.rs  exit.rs  func.rs  loop.rs
zinc-vm/src/instructions/memory/: load.rs  load_array.rs  load_array_by_index.rs  load_array_by_index_global.rs  load_array_global.rs  load_by_index.rs  load_by_index_global.rs  load_global.rs  pop.rs  push.rs  slice.rs  store.rs  store_array.rs  store_array_by_index.rs  store_by_index.rs  store_global.rs  store_sequence_global.rs  swap.rs  tee.rs
zinc-vm/src/stdlib/: mod.rs
zinc-vm/src/stdlib/array/: pad.rs  reverse.rs  truncate.rs
zinc-vm/src/stdlib/bits/: field_from_bits.rs  signed_from_bits.rs  to_bits.rs  unsigned_from_bits.rs
zinc-vm/src/stdlib/crypto/: mod.rs  pedersen.rs  schnorr.rs  sha256.rs
zinc-vm/src/stdlib/ff/: inverse.rs
