[workspace]
members = [
    "zargo",

    "zinc-compiler",
    "zinc-bytecode",
    "zinc-utils",
    "zinc-vm"

#    "zinc-tester",

#    "schnorr",
]

[patch.crates-io]
bellman_ce = { path = "../bellman" }
ff_ce = { path = "../ff", features = ["derive", "algebra-compat"] }
franklin-crypto = { path = "../reference/franklin-crypto" }
pairing_ce = { path = "../pairing" }
