[package]
name = "zinc-vm"
version = "0.1.5"
authors = [
    "Alexander Movchan <am@matterlabs.dev>",
    "hedgar2017 <hedgar2017@gmail.com>",
]
edition = "2018"
description = "The Zinc virtual machine"

[[bin]]
name = "zvm"
path = "src/cli/zvm.rs"

[dependencies]
log = "0.4"
env_logger = "0.7"
clap = "2.33.0"
rand = "0.4.5"
colored = "1.9.0"
serde_json = "1.0.44"
structopt = "0.3.8"
lazy_static = "1.4.0"
hex = "0.4.0"
failure = "0.1"

algebra = { path = "../../zexe/algebra" , features = ["derive"] }
ff-fft = { path = "../../zexe/ff-fft"  }
groth16 = { path = "../../zexe/groth16"  }
r1cs-core = { path = "../../zexe/r1cs-core"  }
r1cs-std = { path = "../../zexe/r1cs-std"  }

num-bigint = "0.2.3"
num-traits = "0.2.8"
num-integer = "0.1.41"

zinc-bytecode = { path = "../zinc-bytecode" }
zinc-utils = { path = "../zinc-utils" }

[build-dependencies]
clap = "2.33.0"
num-bigint = "0.2.3"

[features]
full = ['r1cs-std/full']
parallel = ['r1cs-std/parallel']
