[package]
name = "zinc-vm"
version = "0.1.5"
authors = [
    "Alexander Movchan <am@matterlabs.dev>",
    "hedgar2017 <hedgar2017@gmail.com>",
]
edition = "2018"
description = "The Zinc virtual machine"

[[bin]]
name = "zvm"
path = "src/cli/zvm.rs"

[dependencies]
colored = "1.9.0"
env_logger = "0.7"
failure = "0.1"
hex = "0.4.0"
log = "0.4"
num-bigint = "0.2.3"
num-integer = "0.1.41"
num-traits = "0.2.8"
rand = "0.7.3"
serde_json = "1.0.44"
structopt = "0.3.8"

algebra = { path = "../../zexe/algebra" , features = ["bls12_381", "bn254", "derive"] }
groth16 = { path = "../../zexe/groth16" }
r1cs-core = { path = "../../zexe/r1cs-core" }
r1cs-std = { path = "../../zexe/r1cs-std" }

zinc-bytecode = { path = "../zinc-bytecode" }
zinc-utils = { path = "../zinc-utils" }

[dev-dependencies]
rand_xorshift = "0.2.0"
sha2 = "0.9.1"

[features]
full = ["algebra/full", "r1cs-std/full"]
parallel = ["algebra/parallel", "groth16/parallel", "r1cs-std/parallel"]
